plugins {
    id 'java-library'
    id 'idea'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group = pluginGroup
version = pluginVersion

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven { url "https://maven.enginehub.org/repo/" }
    mavenLocal()
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.18.2-R0.1-SNAPSHOT'
    compileOnly 'net.md-5:bungeecord-chat:1.16-R0.4'
    compileOnly 'org.jetbrains:annotations:23.0.0'
    compileOnly('com.sk89q.worldguard:worldguard-bukkit:7.0.6')
    implementation 'org.bstats:bstats-bukkit:2.2.1'
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}

shadowJar {
    relocate 'org.bstats', 'com.jacky8399.bstats'
}

build.dependsOn shadowJar